--- a/beta_1_0_49_20190423_57be8d5.html
+++ b/beta_1_0_49_20190423_57be8d5.html
@@ -45,7 +45,7 @@
         <h1>Starise iOS Beta Notes</h1>
         <div>
 			<h2>
-                <a href="https://NicholasHuangTW.github.io/manifest.plist">1.0.49.2019042301</a>
+                <a href="itms-services://?action=download-manifest&url=https://cloud.starise.network/plist/beta_Starise_1_0_49_20190423_57be8d5.plist">1.0.49.2019042301</a>
             </h2>
             <h4>New</h4>
             <ul>
